# hatch

./: .dockerignore  .env.example  .gitignore  Cargo.toml  fly.coordinator.toml  fly.ledger.toml  render.yaml
.sqlx/: query-6c343881508066f6a76ec5fca5b3bbfb093c100a40e5131dfd22e1f5b6f24610.json  query-75d055a881109ff20eb55fedfb558c9f735fa1cda0a0b809b83bf34d00e0c547.json  query-a144189d3a04b811379a08c20fb7565ae60a02a44cf8aeac8d2ea0c1444703c3.json
agent/: Cargo.toml
agent/src/: config.rs  coordinator_client.rs  heartbeat.rs  idle_monitor.rs  job_runner.rs  main.rs  runtime_check.rs
agent/src/network/: mod.rs  wireguard.rs
agent/src/service/: launchd.rs  mod.rs
cli/: Cargo.toml
cli/src/: client.rs  config.rs  main.rs
cli/src/commands/: gpu.rs  job.rs  mod.rs  provider.rs  wallet.rs
contracts/evm/: foundry.toml
contracts/evm/script/: Deploy.s.sol
contracts/evm/src/: Escrow.sol  NMCToken.sol  ProviderNFT.sol  QuantumVerifier.sol  Registry.sol
contracts/evm/test/: NeuralMesh.t.sol
contracts/solana/: Anchor.toml
contracts/solana/programs/neuralmesh/: Cargo.toml
contracts/solana/programs/neuralmesh/src/: errors.rs  lib.rs  state.rs
coordinator/: Cargo.toml
coordinator/.sqlx/: query-03a5ebea32edb41bc4577a0cbd616182d7b6170ec33ed6a342d30d57811b3acb.json  query-0b4feed0e452db0d6f1bf41e480aaa3fdaac6e42e68dc1284d921d4012c84f58.json  query-0da986e2ea5caa2858fdf006333ce18ccbbeb47acfe3744c0e346bd8102b89fc.json  query-22f030cc97ca541591d204aecbb6df59284f929a75131eac7e596014aa7257c7.json  query-4231f13dc9863c6b759a58b97a490ec3a396bdd3219237668b0c235d65bb8704.json  query-47813cfd08fd43b16339e169e52bee725d9cc6f76fd47a71e87f22fc6f8f9eb3.json  query-4a7b3a70e2133b4761b36e7648d7f440c24063edd8d493bcc155a4803ecaa4c8.json  query-4e8dd9ca487b76a4be58d8165f45bc4ce8cea36ec018d3ba41df18c2df3ec51f.json  query-98d2bd21ce71d90d004d805fee307db62fc6122e5299bf88e2c1503092f1d3b1.json  query-a159f6e85f3df45bffd6669a4a5d8299e78967718a9f1ad2917dfccca32c7681.json  query-c888f6eb50e7c47b7b273448b92479bea8f427347cfb40fc171a96864836f9e2.json  query-d3c591d680d812286a628962a23691ae10e2a136a35a33478de5b0f572107412.json  query-d9286e759aeb35c833befc64252c7cc39e05616e58807d5b9d4d7e03cf1367e0.json  query-dba37eea541d0b250e10672c1725a253e2212a709bf3c377cd324d3b22d136c4.json  query-e60fb5494af75dd029a26902c88ba6f6bc15affb11616474111f0c496f30acc1.json  query-eda6cb5b8468183d3a339532c2a0c591c44312c2e028235f0f4ea0a0c7dafc0a.json  query-f559a180284e98873b9c77a5a6d8b1fadc27ac651b30b8399a9de7d34f1ec8f6.json
coordinator/src/: main.rs  on_chain.rs
coordinator/src/api/: grpc.rs  mod.rs  rest.rs
coordinator/src/db/: mod.rs
coordinator/src/db/migrations/: 001_initial.sql  002_accounts.sql  003_kyc.sql
coordinator/src/matching/: mod.rs
coordinator/src/p2p/: mod.rs
coordinator/src/queue/: mod.rs
coordinator/src/reputation/: mod.rs
crates/nm-common/: Cargo.toml
crates/nm-common/src/: config.rs  error.rs  lib.rs  types.rs
crates/nm-crypto/: Cargo.toml
crates/nm-crypto/src/: attestation.rs  hybrid_attestation.rs  keys.rs  lib.rs  pq_keys.rs
crates/nm-gpu/: Cargo.toml
crates/nm-gpu/src/: detect.rs  lib.rs  runtime_map.rs  types.rs
crates/nm-gpu/src/backends/: amd.rs  apple.rs  intel_arc.rs  mod.rs  nvidia.rs
crates/nm-macos/: Cargo.toml
crates/nm-macos/src/: gpu_detect.rs  idle.rs  keychain.rs  lib.rs  sandbox.rs  sleep.rs
crates/nm-proto/: Cargo.toml  build.rs
crates/nm-proto/src/: lib.rs
crates/nm-wireguard/: Cargo.toml
crates/nm-wireguard/src/: keys.rs  lib.rs  nat.rs  tunnel.rs
dashboard/: Dockerfile  fly.toml  next.config.ts  package-lock.json  package.json  railway.toml  tailwind.config.ts  tsconfig.json  tsconfig.tsbuildinfo  vercel.json
dashboard/src/app/: globals.css  layout.tsx  page.tsx
dashboard/src/app/account/: page.tsx
dashboard/src/app/api/coordinator/[...path]/: route.ts
dashboard/src/app/api/ledger/[...path]/: route.ts
dashboard/src/app/api/stripe/checkout/: route.ts
dashboard/src/app/api/stripe/webhook/: route.ts
dashboard/src/app/compliance/: page.tsx
dashboard/src/app/jobs/: page.tsx
dashboard/src/app/jobs/[id]/: page.tsx
dashboard/src/app/market/: page.tsx
dashboard/src/app/provider/: page.tsx
dashboard/src/app/wallet/: page.tsx
dashboard/src/components/: ComplianceGate.tsx  ConnectWallet.tsx  Navbar.tsx  NetworkStatsBar.tsx  Web3Provider.tsx
dashboard/src/lib/: api-client.ts  device-id.ts  stripe.ts  utils.ts  web3.ts
docs/: index.html
infrastructure/: Dockerfile.coordinator  Dockerfile.ledger  docker-compose.yml
ledger/: Cargo.toml
ledger/src/: main.rs
ledger/src/off_chain/: handlers.rs  mod.rs
ledger/src/on_chain/: arbitrum.rs  mod.rs
proto/: agent.proto  job.proto  ledger.proto
runtimes/mlx/: requirements.txt  sandbox.sb
runtimes/onnx-coreml/: requirements.txt  sandbox.sb
runtimes/torch-mps/: requirements.txt  sandbox.sb
scripts/: cross-compile.sh  gen-proto.sh  install-agent-macos.sh
sdk/python/: pyproject.toml
sdk/python/neuralmesh/: __init__.py  cli.py  client.py  job.py  provider.py
