[package]
name = "nm-proto"
version.workspace = true
edition.workspace = true
build = "build.rs"

[dependencies]
tonic = { workspace = true }
prost = { workspace = true }
prost-types = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }

[build-dependencies]
tonic-build = "0.12"
