[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "neuralmesh"
version = "0.1.0"
description = "Python SDK for the NeuralMesh decentralized Apple Silicon GPU marketplace"
readme = "README.md"
license = { text = "Apache-2.0" }
authors = [{ name = "NeuralMesh Contributors" }]
keywords = ["apple silicon", "gpu", "mlx", "ml", "inference", "distributed-compute"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.27.0",
    "rich>=13.7.0",
    "click>=8.1.0",
    "tomli>=2.0.1; python_version < '3.11'",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23", "respx>=0.21"]

[project.scripts]
neuralmesh = "neuralmesh.cli:main"

[project.urls]
Homepage   = "https://neuralmesh.io"
Repository = "https://github.com/neuralmesh-io/neuralmesh"
Docs       = "https://docs.neuralmesh.io"

[tool.hatch.build.targets.wheel]
packages = ["neuralmesh"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
