[package]
name = "neuralmesh"
version = "0.1.0"
description = "NeuralMesh on-chain program: NMC token, provider NFTs, and job escrow"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "neuralmesh"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang  = { version = "0.30.1", features = ["init-if-needed"] }
anchor-spl   = { version = "0.30.1", features = ["token", "associated_token", "metadata"] }
mpl-token-metadata = { version = "4.1.2" }

[dev-dependencies]
anchor-client = "0.30.1"
